@@ -1,1 +1,2 @@
 Hello, world
+1.0 + 2.0 + 3.0 = 6.000000
